Bug 349727 random crash due to trashed nsWindow::mIMEData r=masaki.katakai, sr=roc